@@ -1,6 +1,7 @@
-.\" $Id: ares_init.3,v 1.3 2006-05-03 06:11:44 bagder Exp $
+.\" $Id: ares_init.3,v 1.4 2008-05-13 20:48:48 bagder Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
+.\" Copyright (C) 2007-2008 by Daniel Stenberg
 .\"
 .\" Permission to use, copy, modify, and distribute this
 .\" software and its documentation for any purpose and without
@@ -14,7 +15,7 @@
 .\" this software for any purpose.  It is provided "as is"
 .\" without express or implied warranty.
 .\"
-.TH ARES_INIT 3 "7 December 2004"
+.TH ARES_INIT 3 "13 May 2008"
 .SH NAME
 ares_init, ares_init_options \- Initialize a resolver channel
 .SH SYNOPSIS
@@ -49,10 +50,22 @@ description of possible flag values.
 .B ARES_OPT_TIMEOUT
 .B int \fItimeout\fP;
 .br
-The number of seconds each name server is given to respond to a query
-on the first try.  (After the first try, the timeout algorithm becomes
-more complicated, but scales linearly with the value of
-\fItimeout\fP.)  The default is five seconds.
+The number of seconds each name server is given to respond to a query on the
+first try.  (After the first try, the timeout algorithm becomes more
+complicated, but scales linearly with the value of \fItimeout\fP.)  The
+default is five seconds. This option is being deprecated by
+\fIARES_OPT_TIMEOUTMS\fP starting in c-ares 1.5.2.
+.TP 18
+.B ARES_OPT_TIMEOUTMS
+.B int \fItimeout\fP;
+.br
+The number of milliseconds each name server is given to respond to a query on
+the first try.  (After the first try, the timeout algorithm becomes more
+complicated, but scales linearly with the value of \fItimeout\fP.)  The
+default is five seconds. Note that this option is specified with the same
+struct field as the former \fIARES_OPT_TIMEOUT\fP, it is but the option bits
+that tell c-ares how to interpret the number. This option was added in c-ares
+1.5.2.
 .TP 18
 .B ARES_OPT_TRIES
 .B int \fItries\fP;
